--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,18 @@ spring.application.name=spring
 
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto= update
+server.port=8090
+
+# Datasource connection
+
+spring.datasource.platform=mysql
+
+spring.datasource.initialization-mode=always
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.show-sql=true
