--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,7 @@
-spring.application.name=spring
-#spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-#spring.datasource.username= root
-#spring.datasource.password= 123456
-
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto= update
-server.port=8090
-
-# Datasource connection
-
-spring.datasource.platform=mysql
-
-spring.datasource.initialization-mode=always
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Hibernate
-
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=
+spring.datasource.password=   
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.hibernate.show-sql=true
