--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+#spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb?createDatabaseIfNotExist=true
 spring.datasource.username=
 spring.datasource.password=   
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
