--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.url=jdbc:mysql://104.198.182.62:3306/springdb?createDatabaseIfNotExist=true
-spring.datasource.username=
-spring.datasource.password=   
+spring.datasource.username=mysql
+spring.datasource.password=mysql   
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
