--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-js</artifactId>
+			<artifactId>mysql-connector-jpa</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
