--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.url=jdbc:mysql://35.225.105.40:3306/springdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://35.239.206.62:3306/springdb?createDatabaseIfNotExist=true
 spring.datasource.username=mysql
-spring.datasource.password=mysql   
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
