--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.url=jdbc:mysql://35.239.206.62:3306/springdb?createDatabaseIfNotExist=true
-spring.datasource.username=mysql
+spring.datasource.url=jdbc:mysql://35.224.243.239:3306/springdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
