--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=spring
 eureka.client.service-url.default-zone=http://34.41.221.1:7797/eureka
+server.port=8262
 
