--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>  
+	        </dependency>  
                         <groupId>org.springframework.cloud</groupId>  
                         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>  
                 </dependency>  
