--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	        </dependency>  
-                        <groupId>org.springframework.cloud</groupId>  
-                        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>  
+	        <dependency>
+                        <groupId>org.springframework.cloud</groupId>
+                        <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                        <version>4.0.3</version>
                 </dependency>  
 
 		<dependency>
